[package]
name = "hubspot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1.2"
reqwest = {version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
time = {version = "0.3.6", features = ["std", "serde"]}