[package]
name = "hubspot"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/WORK180/hubspot"
keywords = ["hubspot", "crm", "customer", "api"]
categories = ["api-bindings"]
license = "MIT"
description = "An unofficial hupspot api client library."
include = ["src/**/*", "LICENSE-*", "README.md"]
readme = "README.md"
rust-version = "1.73"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.1"
strum = "0.27"
strum_macros = "0.27"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
time = { version = "0.3", features = ["std", "serde", "serde-well-known"] }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
